fix: recent trips text wrapping issue in android version < 5.0

--- a/www/components/recent-trips/recent-trips.css
+++ b/www/components/recent-trips/recent-trips.css
@@ -11,8 +11,14 @@
 
 .infoEntry {
     font-size: 12pt;
-    padding-bottom: 24px;
+    padding-bottom: 0px;
+    white-space: nowrap;
     min-height: 20px;
+}
+
+.infoEntryFisherName {
+    display: block;
+    padding-bottom: 16px;
 }
 
 .infoEntry:last-child{
